# masterarbeit

./: CMakeLists.txt  CustomVoxelGrid.cpp  filter.cpp  filter.h  ground_segmentation.cpp  ground_segmentation.h  main.cpp  preprocessing.cpp  surface.cpp  surface.h
data/: 0.000000000.pcd  1.pcd  1_30.pcd  1_noise.pcd  2_halb_slope.pcd  2_noise_halb_slope.pcd  test.pcd  test_new.pcd
data/pseudo_data/: slope_0_15.pcd  slope_10_ele_0_5.pcd  slope_10_ele_5.pcd  slope_15.pcd
data/temp/: 1.txt  point_rgb.pcd
